Fix slider label layout on small screens

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -29,3 +29,7 @@
   --mdc-theme-text-icon-on-dark: hsla(0,0%,100%,0.5);
   --darryl-theme-background: #fafafa;
 }
+
+.u-centered {
+  text-align: center;
+}
